--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>MarketClass - The perfect market to find your place!</title>
+    <title>FindYourGuide - Tu guía perfecto para cada destino</title>
   </head>
   <body class="color-theme-purple mont-font loaded">
     <noscript>You need to enable JavaScript to run this app.</noscript>
